Enable JDK preview-features during compilation